# ros-mpu9250-imu

./: CMakeLists.txt  package.xml
include/: AK8963_Magnetometer.h  I2CBus.h  MPU9250_Acc_Gyro.h
include/mpu9250_imu/: mpu9250.h
src/: AK8963_Magnetometer.cpp  I2CBus.cpp  MPU9250_Acc_Gyro.cpp  mpu9250_imu.cpp  mpu9250_main.cpp
